<resources>
    <string name="app_name">KINOINTERNSHIP</string>
    <string name="main_fragment_title">Films:</string>
    <string name="film_title">Title for the film</string>
    <string name="film_year">Year of the film </string>
    <string name="hello_blank_fragment">JELLO!!!</string>
    <string name="base_url">http://www.omdbapi.com/</string>
    <string name="duration_title">Duration </string>
    <string name="genres_title">Genres </string>
    <string name="actors_title">Actors </string>
    <string name="year_title">Year </string>
    <string name="description_button_text">Show short description</string>
    <string name="film_description_title">Description</string>
    <string name="title_activity_splash">SplashActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string name="search">Search</string>
    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>