<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorMainBack"
    tools:context=".fragments.DetailsFragment"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingBottom="50dp">


        <FrameLayout
            android:id="@+id/poster"
            android:layout_width="match_parent"
            android:layout_height="437dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:background="@color/black"
            app:layout_constraintTop_toTopOf="parent">

            <ImageView
                android:id="@+id/poster_image"
                android:layout_width="match_parent"
                android:layout_height="500dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:foreground="@drawable/gradient_image"
                android:scaleType="centerCrop"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.exoplayer2.ui.PlayerView
                android:id="@+id/video_view"
                android:visibility="invisible"
                app:use_controller="false"
                android:layout_width="match_parent"
                android:layout_height="333dp" />
        </FrameLayout>

        <TextView
            android:id="@+id/film_title"
            android:layout_width="282dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:foregroundGravity="fill"
            android:gravity="center_vertical"
            android:paddingBottom="40dp"
            android:text="Title for the film"
            android:textColor="@android:color/white"
            android:textSize="26sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="@+id/poster"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/poster"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/duration"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingBottom="20dp"
            android:text="Duration"
            android:textColor="@color/colorTextBlue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/duration_title"
            app:layout_constraintTop_toBottomOf="@+id/duration_title" />

        <TextView
            android:id="@+id/year"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:paddingBottom="20dp"
            android:text="Year"
            android:textColor="@color/colorTextBlue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/year_title"
            app:layout_constraintTop_toBottomOf="@+id/year_title" />

        <TextView
            android:id="@+id/duration_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:text="@string/duration_title"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/film_title"
            app:layout_constraintTop_toBottomOf="@+id/film_title" />

        <TextView
            android:id="@+id/genres_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/genres_title"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/year"
            app:layout_constraintTop_toBottomOf="@+id/year" />

        <TextView
            android:id="@+id/genres"
            android:layout_width="330dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:maxWidth="178dp"
            android:paddingBottom="20dp"
            android:text="Genres"
            android:textColor="@color/colorTextBlue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/genres_title"
            app:layout_constraintTop_toBottomOf="@+id/genres_title" />

        <TextView
            android:id="@+id/actors"
            android:layout_width="330dp"
            android:layout_height="wrap_content"

            android:layout_marginTop="16dp"
            android:maxWidth="178dp"
            android:paddingBottom="20dp"
            android:singleLine="false"
            android:text="Actors"
            android:textColor="@color/colorTextBlue"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/actors_title"
            app:layout_constraintTop_toBottomOf="@+id/actors_title" />

        <TextView
            android:id="@+id/actors_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/actors_title"
            android:textColor="@android:color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/genres"
            app:layout_constraintTop_toBottomOf="@+id/genres" />

        <TextView
            android:id="@+id/year_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:text="@string/year_title"
            android:textColor="@android:color/white"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="@+id/duration"
            app:layout_constraintTop_toBottomOf="@+id/duration" />

        <Button
            android:id="@+id/description_button"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="36dp"
            android:background="@android:color/transparent"
            android:foregroundTint="#FFFFFF"
            android:text="@string/description_button_text"
            android:textColor="@color/pinkButtonsText"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/actors" />

        <Button
            android:id="@+id/video_view_button"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:layout_marginBottom="12dp"
            android:background="@drawable/round_button"
            android:foreground="@drawable/ic_baseline_play_arrow_14"
            app:layout_constraintBottom_toBottomOf="@+id/film_title"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.395"
            app:layout_constraintStart_toEndOf="@+id/film_title" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>